fix: integracao do front e back